tests/valid/unary_operators/return_not_0.rs
/*
return: 1
*/
main(): i32{
    return !0;
}