tests/invalid/numbers/no_semicolon.rs
/*
fail: 1
*/

main(): i32 {
    return 0
}
